--- a/parte2/productos/css/style.css
+++ b/parte2/productos/css/style.css
@@ -13,18 +13,20 @@ body{
     margin: auto;
     margin-bottom: 50px;
 }
-.form-reg{
+
+.content{
     max-width: 640px;
     margin: 0 auto;
     padding: 55px;
     box-sizing: border-box;
     background-color: #ffff;
     box-shadow: 0 1px 3px 0 rgb(0, 0, 0, 0.1);
-    font: bold 14px sans;
+    font: bold 14px sans-serif;
     text-align: center;
 }
-.titulo_form{
-    
+.form_row{
+    text-align: left;
+    margin-bottom: 22px;
 }
 
 .form-reg h1{
@@ -35,4 +37,31 @@ body{
     padding: 0 10px 15px;
     border-bottom: 2px solid #6caee0;
     margin: 0;
+    margin-bottom: 20px;
+}
+.form-reg .form_row label{
+    display: inline-block;
+    box-sizing: border-box;
+    color: #5f5f5f;
+    width: 180px;
+    vertical-align: top;
+    padding: 12px 25px;
+}
+.form-reg input[type=text], #importado,input[type=num]{
+    color: #5f5f5f;
+    box-sizing: border-box;
+    width: 240px;
+    height: 30px;
+}
+.form-reg input[type=submit],.form-reg input[type=reset]{
+    display: block;
+    border-radius: 2px;
+    background-color: #6caee0;
+    color: #ffffff;
+    font-weight: bold;
+    box-shadow: 1px 2px 4px 0 rgb(0,0,0,0.08);
+    padding: 14px 22px;
+    border: 0;
+    margin: 40px 183px 0;
+    cursor: pointer;
 }
