--- a/parte3/sesiones/style/estilosform.css
+++ b/parte3/sesiones/style/estilosform.css
@@ -1,15 +1,19 @@
-form input[type="submit"]{
-    margin-left: 44px;
-    text-decoration: none;
-    width: 100px;
-    height: 100px;
-    border: 1px solid #d7d7d7;
-    background: #8f8e8c;
-}
-form input[type="password"],form input[type="email"]{
-    display: table-cell;
-    width: 300px;
-    height: 20px;
-    border: 1px solid #d7d7d7;
-    border-radius: 3px;
-}
+ 
+    form input[type="email"], form input[type="password"] {
+        width: 200px;
+        height: 20px;
+        border: 1px solid #d7d7d7;
+        border-radius: 3px;
+        margin-bottom: 22px;
+        text-align: left;
+        }
+        form input[type="submit"]{
+        margin-left: 44px;
+        text-decoration: none;
+        width: 100px;
+        height: 30px;
+        border: 1px solid #d7d7d7;
+        background: #8F8E8C;
+        border-radius: 3px;
+        color:white;
+        }
